// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Component API/Token Compact 1`] = `
<div
  dir="ltr"
>
  <span
    className="fd-token fd-token--compact"
    role="button"
    tabIndex="0"
  >
    <span
      className="fd-token__text"
    >
      Compact
    </span>
    <button
      className="fd-token__close"
      onClick={[Function]}
      tabIndex="-1"
    />
  </span>
</div>
`;

exports[`Storyshots Component API/Token Dev 1`] = `
<div
  dir="ltr"
>
  <span
    className="fd-token"
    role="button"
    tabIndex="0"
  >
    <span
      className="fd-token__text"
    >
      Default
    </span>
    <button
      className="fd-token__close"
      onClick={[Function]}
      tabIndex="-1"
    />
  </span>
</div>
`;

exports[`Storyshots Component API/Token Primary 1`] = `
<div
  dir="ltr"
>
  <span
    className="fd-token"
    role="button"
    tabIndex="0"
  >
    <span
      className="fd-token__text"
    >
      Default
    </span>
    <button
      className="fd-token__close"
      onClick={[Function]}
      tabIndex="-1"
    />
  </span>
</div>
`;

exports[`Storyshots Component API/Token Read Only 1`] = `
<div
  dir="ltr"
>
  <span
    className="fd-token fd-token--readonly"
    role="button"
    tabIndex="0"
  >
    <span
      className="fd-token__text"
    >
      Compact
    </span>
    <button
      className="fd-token__close"
      onClick={[Function]}
      tabIndex="-1"
    />
  </span>
</div>
`;
